--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,110 @@
+a2wsgi==1.9.0
 absl-py==1.0.0
+aiobotocore==2.9.0
+aiohttp==3.9.1
+aioitertools==0.11.0
+aiosignal==1.3.1
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.2.0
+apache-airflow==2.6.1
+apache-airflow-providers-amazon==8.15.0
+apache-airflow-providers-common-sql==1.9.0
+apache-airflow-providers-ftp==3.7.0
+apache-airflow-providers-http==4.8.0
+apache-airflow-providers-imap==3.5.0
+apache-airflow-providers-sqlite==3.6.0
+apispec==5.2.2
 appnope==0.1.2
+argcomplete==3.2.1
+asgiref==3.7.2
+asn1crypto==1.5.1
 asttokens==2.0.5
 astunparse==1.6.3
 async-timeout==4.0.3
+attrs==23.1.0
+Babel==2.14.0
 backcall==0.2.0
+beautifulsoup4==4.12.2
+blinker==1.7.0
+boto3==1.34.11
+botocore==1.34.11
 brainflow==5.10.1
+cachelib==0.9.0
 cachetools==5.0.0
+cattrs==23.2.3
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==2.0.9
+click==8.1.7
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==4.8.0
+ConfigUpdater==3.2
+connexion==2.14.2
+cron-descriptor==1.4.0
+croniter==2.0.1
+cryptography==41.0.7
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
+Deprecated==1.2.14
+dill==0.3.7
 distlib==0.3.6
+dnspython==2.4.2
 docutils==0.18.1
+email-validator==1.3.1
 entrypoints==0.4
+exceptiongroup==1.2.0
 executing==0.8.3
 filelock==3.9.0
 firebase==3.0.1
+Flask==2.2.5
+Flask-AppBuilder==4.3.0
+Flask-Babel==2.0.0
+Flask-Caching==2.1.0
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.5.0
+Flask-Login==0.6.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.1
 flatbuffers==2.0
 fonttools==4.28.5
+frozenlist==1.4.1
+fsspec==2023.12.2
 gast==0.5.3
 gcloud==0.17.0
 google-auth==2.6.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 googleapis-common-protos==1.54.0
+graphviz==0.20.1
+greenlet==3.0.3
 grpcio==1.48.1
 grpcio-tools==1.48.1
 gspread==5.2.0
+gunicorn==21.2.0
+h11==0.14.0
 h5py==3.6.0
+httpcore==1.0.2
 httplib2==0.20.2
+httpx==0.26.0
 idna==3.3
 imageio==2.14.1
 importlib-metadata==4.10.1
+importlib-resources==6.1.1
+inflection==0.5.1
 ipykernel==6.10.0
 ipython==8.2.0
+itsdangerous==2.1.2
 jedi==0.18.1
+Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.1.0
+jsonpath-ng==1.6.0
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
 jupyter-client==7.2.0
 jupyter-core==4.9.2
 jws==0.1.3
@@ -46,10 +114,25 @@ Kivy==2.0.0
 Kivy-Garden==0.1.4
 kivymd==0.104.2
 kiwisolver==1.3.2
+lazy-object-proxy==1.10.0
 libclang==13.0.0
+limits==3.7.0
+linkify-it-py==2.0.2
+lockfile==0.12.2
+lxml==5.0.0
+Mako==1.3.0
 Markdown==3.3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+multidict==6.0.4
 nest-asyncio==1.5.4
 networkx==2.6.3
 nptyping==1.4.4
@@ -58,13 +141,19 @@ oauth2client==3.0.0
 oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
+ordered-set==4.1.0
 packaging==21.3
 pandas==1.3.5
 parso==0.8.3
+pathspec==0.9.0
+pendulum==2.1.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==3.0.0
+pluggy==1.3.0
+ply==3.11
+prison==0.2.1
 prompt-toolkit==3.0.28
 protobuf==3.20.2
 psutil==5.9.0
@@ -73,45 +162,83 @@ pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybind11==2.11.1
+pycparser==2.21
 pycryptodome==3.4.3
-Pygments==2.11.1
+pydantic==1.10.0
+pydantic_core==2.14.6
+Pygments==2.17.2
+PyJWT==2.8.0
 pyparsing==3.0.6
 Pyrebase==3.0.27
+python-daemon==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jwt==2.0.1
+python-multipart==0.0.6
+python-nvd3==0.15.0
+python-slugify==8.0.1
 pytz==2021.3
+pytzdata==2020.1
 PyWavelets==1.2.0
+PyYAML==6.0.1
 pyzmq==22.3.0
 redis==5.0.1
+redshift-connector==2.0.918
+referencing==0.32.0
 requests==2.27.1
 requests-oauthlib==1.3.1
 requests-toolbelt==0.7.0
+rfc3339-validator==0.1.4
+rich==13.7.0
+rich-argparse==1.4.0
+rpds-py==0.15.2
 rsa==4.8
+s3fs==2023.12.2
+s3transfer==0.10.0
 scikit-image==0.19.1
 scikit-learn==1.0.2
 scipy==1.7.3
+scramp==1.4.4
 seaborn==0.11.2
+setproctitle==1.3.3
 six==1.16.0
+sniffio==1.3.0
+soupsieve==2.5
 spotipy==2.23.0
+SQLAlchemy==1.4.50
+SQLAlchemy-JSONField==1.0.2
+sqlalchemy-redshift==0.8.14
+SQLAlchemy-Utils==0.41.1
+sqlparse==0.4.4
 stack-data==0.2.0
+starlette==0.32.0.post1
+tabulate==0.9.0
+tenacity==8.2.3
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.8.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
+text-unidecode==1.3
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.0.0
 tifffile==2021.11.2
+time-machine==2.13.0
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
-typing_extensions==4.0.1
+typing_extensions==4.9.0
 typish==1.9.3
+tzdata==2023.3
+uc-micro-py==1.0.2
+unicodecsv==0.14.1
 urllib3==1.26.7
 virtualenv==20.19.0
+watchtower==3.0.1
 wcwidth==0.2.5
-Werkzeug==2.0.2
+Werkzeug==2.2.3
 wrapt==1.13.3
+WTForms==3.1.1
+yarl==1.9.4
 zipp==3.7.0
